<resources>
    <string name="app_name">TeamUp</string>

    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="submit">Submit</string>
    <string name="username_input">lpalaic</string>
    <string name="password_input">palaic</string>

    <string name="signin">Sign in</string>
    <string name="logoapp">logoapp</string>
    <string name="register">Register</string>
    <string name="drawer_open">Open menu</string>
    <string name="drawer_close">Close menu</string>
    <string name="log_out_question">Log out from application?</string>
    <string name="cancel">Cancel</string>
    <string name="update_profile">Update your profile?</string>
    <string name="update">Update</string>
    <string name="map">Map</string>
    <string name="user_status">Status</string>
    <string name="home">Home</string>
    <string name="group_name">Group name: %1$s</string>
    <string name="group_name_non_param">Group name: </string>
    <string name="group_code">Code: %1$s</string>
    <string name="group_code_non_param">Code: </string>
    <string name="counter">Counter: %1$d</string>

    <string name="internet_error">Cannot connect to server, please check your internet connection</string>

    <!-- validation -->
    <string name="first_name_error">First name can only contain letters (min 3, max 45)</string>
    <string name="last_name_error">Last name can only contain letters (min 3, max 45)</string>
    <string name="username_error">Username can only contain letters (min 5, max 45)</string>
    <string name="password_error">Password too short or too long (min 5, max 45)</string>
    <string name="confirm_password_error">Passwords do not match</string>

    <!-- menu -->
    <string name="profile">Profile</string>
    <string name="code">Code</string>
    <string name="nfc">NFC</string>
    <string name="group">Enter group by:</string>
    <string name="new_group">New group</string>
    <string name="history">History</string>
    <string name="log_out">Log out</string>
    <string name="leave_group">Leave group</string>

    <!-- Create team -->
    <string name="team_name">Team name</string>
    <string name="team_desc">Description</string>
    <string name="team_radius">Radius</string>
    <string name="team_back">Back</string>
    <string name="create_team">Create</string>

    <!-- empty messages -->
    <string name="empty_history">There are no teams in history</string>
    <string name="empty_team">Not joined in group. Use NFC or code to enter the group</string>

    <!-- tests -->
    <string name="test_as">as</string>
    <string name="test_asdf">asdf</string>
    <string name="test_asdf123">asdf123</string>
    <string name="test_lalalalalala">lalalalalala</string>

    <string name="team_name_error">Team name can only contain letters (min 3, max 45)</string>
    <string name="team_desc_error">Team description  can only contain letters (min 3, max 45)</string>
    <string name="team_radius_error">Radius not valid (must be defined with . and in format of single or
        double precision number</string>

    <!-- Prompt-->
    <string name="join_group">Enter code to access team</string>
    <string name="join">Join</string>

    <!-- NFC Beam -->
    <string name="beam"> Please, align the back of your device with another device! </string>
    <string name="nfc_error">NFC is not turned on, open NFC settings?</string>
    <string name="open_settings">Open settings</string>
    <string name="nfc_not_supported">This phone does not support NFC</string>
    <string name="please_join">Please use NFC or code to join to group first</string>

    <!-- Prompt calm down user-->
    <string name="calmdown"> Calm down user? </string>
    <string name="yes"> Yes </string>

    <!-- Map -->
    <string name="location_not_enabled">Turn on location</string>

    <!-- stomp -->
    <string name="user_channel">/user/queue/messages</string>
    <string name="group_channel">/topic/team/</string>

</resources>
