<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/imgvLogo"
                android:background="@drawable/logo"
                android:contentDescription="@string/logoapp"
                android:clickable="false"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp" />

            <android.support.design.widget.TextInputLayout
                android:layout_height="match_parent"
                android:layout_width="fill_parent"
                android:hint="@string/username"
                android:id="@+id/txtUsernameLayout">

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/txtUsername" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:hint="@string/password"
                android:id="@+id/txtPasswordLayout"
                android:layout_marginBottom="10dp">

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/txtPassword" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnSignIn"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:text="@string/signin" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtRegister"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="54dp"
                android:text="Register"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:textSize="16dp"
                android:layout_marginTop="50dp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
