<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="hr.foi.teamup.CreateTeamActivityActivity">


    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            />
        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/registrationScrollView" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- Team name -->
                <android.support.design.widget.TextInputLayout
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:id="@+id/teamNameLayout">

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/teamName"
                        android:hint="@string/team_name"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>

                <!-- Team desc -->
                <android.support.design.widget.TextInputLayout
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:id="@+id/teamDescLayout">

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/teamDesc"
                        android:hint="@string/team_desc"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>

                <!-- Radius -->
                <android.support.design.widget.TextInputLayout
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:id="@+id/teamRadiusLayout">

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/teamRadius"
                        android:hint="@string/team_radius"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>

                <!-- Submit button -->
                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/buttonstyle"
                    android:textColor="@color/white"
                    android:text="@string/create_team"
                    android:layout_gravity="bottom"
                    android:id="@+id/submitButton" />
            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</android.support.v4.widget.DrawerLayout>