<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="hr.foi.teamup.RegistrationActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/registrationScrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- First name -->
            <android.support.design.widget.TextInputLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:id="@+id/firstNameInputLayout">

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/firstNameInput"
                    android:hint="@string/first_name"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <!-- Last name -->
            <android.support.design.widget.TextInputLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:id="@+id/lastNameInputLayout">

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lastNameInput"
                    android:hint="@string/last_name"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tv"
                android:layout_width="fill_parent"
                android:layout_height="400px"
                android:textColor="#0b0b0b"
                android:textSize="25px"
                android:typeface="serif"
                android:textStyle="italic"/>

            <!-- Submit button -->
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonstyle"
                android:textColor="@color/white"
                android:text="@string/submit"
                android:layout_gravity="bottom"
                android:id="@+id/submitButton" />
        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
